test/langtools/tools/javac/specialConstantFolding/ReflectiveErrorTest.out
ReflectiveErrorTest.java:11:58: compiler.err.reflective.error: ofDescriptor, java.lang.invoke.constant.MethodTypeDesc, Invalid parameter type: ^
1 error
